# spec-kit-role-persona

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SUPPORT.md  pyproject.toml
docs/: beast-mode.md  constitution-integration.md
src/specify_cli/: __init__.py
src/specx_cli/: __init__.py  agent_persona_context.py  beast_mode_customizer.py  persona_manager.py
templates/: checklist-template.md  plan-template.md  tasks-template.md
templates/chatmodes/: README.md  beast-mode-copilot.md  beast-mode-markdown.md  beast-mode-toml.toml
templates/commands/: analyze.md  checklist.md  clarify.md  constitution.md  implement.md  specify.md
templates/personas/: backend-developer.md  business-analyst.md  devops.md  frontend-developer.md  quality-assurance.md  security.md  solution-architect.md  tech-lead.md  ux.md
